--- a/fits.tex
+++ b/fits.tex
@@ -127,8 +127,8 @@
 \hypersetup{
   pdftitle={Forecasting interrupted time series},
   pdfauthor={Rob J Hyndman; Bahman Rostami-Tabar},
-  pdfkeywords={Forecasting, interrupted time series, disruptive events,
-COVID-19},
+  pdfkeywords={counterfactual forecasting, COVID-19, disruptive
+events, intervention analysis, structural breaks},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -232,7 +232,7 @@ COVID-19},
 % Title and date
 
 \title{Forecasting interrupted time series}
-\date{19 February 2024}
+\date{20 February 2024}
 
 \def\Date{\number\day}
 \def\Month{\ifcase\month\or
@@ -308,61 +308,8 @@ COVID-19},
 % Authors
 
 \nocover
-  \author{Rob J Hyndman, Bahman Rostami-Tabar}
-  \addresses{%
-    %
-      \textbf{Rob J Hyndman}\\%
-      %
-        Department of Econometrics \& Business Statistics\\%
-        %
-        %
-        %
-      %
-        %
-        Monash University\\%
-        %
-        %
-      %
-        %
-        %
-        Clayton VIC \\%
-        %
-      %
-        %
-        %
-        %
-        Australia\\%
-      %
-        %
-        %
-        %
-        %
-      %
-      {Email: Rob.Hyndman@monash.edu}\\%
-      \textit{Corresponding author}\\[0.5cm]%
-   %
-      \textbf{Bahman Rostami-Tabar}\\%
-      %
-        %
-        Cardiff Business School\\%
-        %
-        %
-      %
-        %
-        %
-        %
-        %
-      %
-        %
-        %
-        %
-        United Kingdom\\%
-      %
-      {Email: rostami-tabarb@cardiff.ac.uk}\\%
-      \\[0.5cm]%
-   %
-   }%
-   \lfoot{\sf Hyndman, Rostami-Tabar: 19 February 2024}
+  \blind
+  \lfoot{\sf20 February 2024}
 
 % Keywords
 
@@ -393,8 +340,9 @@ interrupted data in numerous domains.
 \end{abstract}
 
 \begin{keywords}
-  Forecasting, interrupted time series, disruptive events, COVID-19; 
-  Forecasting, interrupted time series, disruptive events, COVID-19
+  counterfactual forecasting; COVID-19; disruptive events; intervention
+analysis; 
+  structural breaks.
 \end{keywords}
 
 \setstretch{1.5}
