response letter-first go

--- a/references.bib
+++ b/references.bib
@@ -306,7 +306,7 @@
   title     = {Demand forecasting under lost sales stock policies},
   author    = {Trapero, Juan R and de Frutos, Enrique Holgado and Pedregal, Diego J},
   journal   = {International Journal of Forecasting},
-  year      = {2023},
+  year      = {In Press},
   publisher = {Elsevier}
 }
 
